--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,12 @@ script:
 - du -sh .
 - XZ_OPT=-e9 tar cJfv cm_twrp-5.1.1-$(date +"%Y%m%d")-norepo.tar.xz *
 - ls -h -l *.tar.xz ; du -h *.tar.xz
+
 deploy:
   skip_cleanup: true
   provider: releases
   api_key: "$GIT_OAUTH_TOKEN_TB"
-  file: "$HOME/twrp/*.tar.xz"
+  file: "$HOME/twrp/cm_twrp-5.1.1-$(date +"%Y%m%d")-norepo.tar.xz"
   on:
     tags: false
     repo: yshtemp/twrp
