--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ deploy:
   skip_cleanup: true
   provider: releases
   api_key: "$GIT_OAUTH_TOKEN_TB"
-  file: "$HOME/twrp/*.tar.xz"
+  file: "$HOME/twrp/cm_twrp-5.1.1-$(date +"%Y%m%d")-repo.tar.xz"
   on:
     tags: false
     repo: yshtemp/twrp
