--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
 - repo sync -c -f -j64 --force-sync --no-clone-bundle --no-tags
 - du -sh .
 - export today=$(date +"%Y%m%d")
-- XZ_OPT=-e9 tar cJfv cm_twrp-5.1.1-$today-norepo.tar.xz *
+- XZ_OPT=-e9 tar cJf - $HOME/twrp/ -P | pv -s $(du -sb $HOME/twrp/ | awk '{print $1}') | gzip > cm_twrp-5.1.1-$today.tar.xz
 - ls -h -l *.tar.xz ; du -h *.tar.xz
 
 deploy:
