--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
 sudo: required
 before_script:
 - cd $HOME
-- sudo apt-get install -y git git-core
+- sudo apt-get install -y git git-core pv
 - curl http://commondatastorage.googleapis.com/git-repo-downloads/repo > ~/bin/repo && chmod a+x ~/bin/repo
 - echo "export PATH=~/bin:$PATH" >> ~/.bashrc ; source ~/.bashrc
 - mkdir twrp && cd twrp
